--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <meta name="description" content="Desenvolvedor Front End & UX/UI Designer, Localizado no Rio de Janeiro">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;1,600&display=swap" rel="stylesheet">
-    <title>Lobo - Desenvolvedor e Designer</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;1,600&display=swap"
+        rel="stylesheet">
+    <title>Lobo - Desenvolvedor e UX/UI Designer</title>
 </head>
 
 <body>
@@ -43,7 +44,8 @@
 
             <p class="experiencia-texto">Desenvolvo pequenos projetos como o Bikcraft utilizando apenas
                 <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>. Para aplicativos web como a
-                rede social Dogs, eu trabalhei no <strong>UX</strong> e <strong>UI Design</strong> do projeto.</p>
+                rede social Dogs, eu trabalhei no <strong>UX</strong> e <strong>UI Design</strong> do projeto.
+            </p>
 
             <div class="empresa">
                 <span class="empresa-ano">2045</span>
@@ -96,7 +98,9 @@
             <h2 class="subtitulo">Formação</h2>
 
             <div>
-                <p class="formacao-texto">Minha mais recente experiência acadêmica foi o <strong>mestrado</strong> 🎓 que fiz no exterior em <strong>UX Design</strong>. Além disso me mantenho sempre atualizado com cursos intensivos online.</p>  
+                <p class="formacao-texto">Minha mais recente experiência acadêmica foi o <strong>mestrado</strong> 🎓
+                    que fiz no exterior em <strong>UX Design</strong>. Além disso me mantenho sempre atualizado com
+                    cursos intensivos online.</p>
 
                 <ul class="faculdade-lista">
 
@@ -125,7 +129,7 @@
                     <div class="cursos">
 
                         <h3>Cursos intensivos</h3>
-                        
+
                         <ul>
                             <li>UX Design & UI Design <span>56h</span></li>
                             <li>Front End para Iniciantes <span>72h</span></li>
@@ -154,15 +158,16 @@
 
     </section>
 
-    <footer class="footer" id="contato"> 
+    <footer class="footer" id="contato">
         <div class="footer-container">
-          <p class="footer-texto">Estou disponível para novos projetos no momento. Entre em contato comigo e marcamos uma conversa 👋</p>
-          <ul class="footer-contato">
-            <li>lobo@email.com</li>
-            <li>+55 21 9999-9999</li>
-            <li><a href="#">@instagram</a></li>
-          </ul>
-          <p class="footer-copy">Lobo. Alguns direitos reservados.</p>
+            <p class="footer-texto">Estou disponível para novos projetos no momento. Entre em contato comigo e marcamos
+                uma conversa 👋</p>
+            <ul class="footer-contato">
+                <li>lobo@email.com</li>
+                <li>+55 21 9999-9999</li>
+                <li><a href="#">@instagram</a></li>
+            </ul>
+            <p class="footer-copy">Lobo. Alguns direitos reservados.</p>
         </div>
 
     </footer>
